--- a/.github/workflows/nodejs-test.yml
+++ b/.github/workflows/nodejs-test.yml
@@ -17,11 +17,8 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: Build Docker image (no push)
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: false
-        tags: test-image:latest
+      run: |
+        docker build -t test-image:latest .
 
     - name: Run Docker container
       run: |
